touch-ups to come tomorrow

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -54,12 +54,10 @@
         android:id="@+id/seekBar_food"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:backgroundTint="#4CAF50"
-        android:foregroundTint="#4CAF50"
-        android:progressTint="#8BC34A"
-        android:scrollbarThumbHorizontal="@android:color/holo_green_dark"
-        android:scrollbarThumbVertical="@android:color/holo_green_dark"
-        android:thumbTint="#4CAF50"
+        android:backgroundTint="#008577"
+        android:foregroundTint="#008577"
+        android:progressTint="#04DCC5"
+        android:thumbTint="#008577"
         app:layout_constraintBottom_toBottomOf="@id/how_many-1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/how_many-1"
@@ -109,8 +107,8 @@
         android:id="@+id/seekBar_attractions"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:progressTint="#8BC34A"
-        android:thumbTint="#4CAF50"
+        android:progressTint="#04DCC5"
+        android:thumbTint="#008577"
         app:layout_constraintBottom_toBottomOf="@+id/how_many-2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/seekBar_food"
@@ -121,7 +119,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:backgroundTint="#4CAF50"
+        android:backgroundTint="#008577"
         android:text="@string/go"
         android:textColor="@android:color/background_light"
         app:layout_constraintEnd_toEndOf="parent"
